--- a/pfe-frontend/src/app/core/features/components/user/user-create/user-create.component.html
+++ b/pfe-frontend/src/app/core/features/components/user/user-create/user-create.component.html
@@ -28,15 +28,15 @@
 
     <!-- Roles -->
     <div class="form-group">
-      <label>Roles</label>
-      <div class="roles-checkbox-group">
-        <div *ngFor="let role of availableRoles" class="role-checkbox">
-          <input type="checkbox"
-                 [id]="'role-' + role.id"
-                 [value]="role.id"
-                 (change)="onRoleChange($event, role.id)">
-          <label [for]="'role-' + role.id">{{ role.name }}</label>
-        </div>
+      <label>Role</label>
+      <div *ngFor="let role of availableRoles" class="form-check">
+        <input type="radio" class="form-check-input"
+               [id]="'role-' + role.id"
+               [value]="role.id"
+               (change)="onRoleChange(role.id)"
+               [checked]="selectedRole === role.id"
+               name="role">
+        <label class="form-check-label" [for]="'role-' + role.id">{{ role.name }}</label>
       </div>
     </div>
 
