--- a/pfe-frontend/src/app/core/features/components/user/user-edit/user-edit.component.html
+++ b/pfe-frontend/src/app/core/features/components/user/user-edit/user-edit.component.html
@@ -24,18 +24,12 @@
       <div class="mb-3">
         <label class="form-label">Roles</label>
         <div class="roles-checkbox-group">
-          <div *ngFor="let role of availableRoles" class="form-check">
-            <input class="form-check-input" 
-                   type="checkbox" 
-                   [id]="'role-' + role.id"
-                   [value]="role.id"
-                   [(ngModel)]="selectedRoles"
-                   [ngModelOptions]="{standalone: true}"
-                   name="roles">
-            <label class="form-check-label" [for]="'role-' + role.id">
-              {{ role.name }}
-            </label>
-          </div>
+         <!-- Role selection dropdown -->
+<select [(ngModel)]="selectedRole" name="role" class="form-control">
+  <option *ngFor="let role of availableRoles" [value]="role.id">
+    {{ role.name }}
+  </option>
+</select>
         </div>
       </div>
       <button type="submit" class="btn" [disabled]="!userForm.valid || loading">
