--- a/pfe-frontend/src/app/core/features/components/employee/employee-list/employee-list.component.html
+++ b/pfe-frontend/src/app/core/features/components/employee/employee-list/employee-list.component.html
@@ -38,7 +38,7 @@
           <td>{{ employee.first_name }} {{ employee.last_name }}</td>
           <td>{{ employee.department }}</td>
           <td>{{ employee.position }}</td>
-          <td>{{ employee.email }}</td>
+          <td>{{ employee.email || 'No account' }}</td>
           <td>{{ employee.phone }}</td>
 
           <td class="actions">
