--- a/pfe-frontend/src/app/core/sidebar/sidebar.component.html
+++ b/pfe-frontend/src/app/core/sidebar/sidebar.component.html
@@ -42,6 +42,8 @@
       <ul>
         <li><a routerLink="leave" routerLinkActive="active">Leave Types</a></li>
         <li><a routerLink="leave/requests" routerLinkActive="active">Leave Requests</a></li>
+        <li><a routerLink="leave/request" routerLinkActive="active">Request a Leave</a></li>
+
       </ul>
     </div>
 
