--- a/pfe-frontend/src/app/core/features/components/user/user-list/user-list.component.html
+++ b/pfe-frontend/src/app/core/features/components/user/user-list/user-list.component.html
@@ -2,9 +2,9 @@
   <div class="card">
     <div class="card-header d-flex justify-content-between align-items-center">
       <h3>User List</h3>
-      <a routerLink="/users/create" class="btn btn-primary">
+      <!-- <a routerLink="/users/create" class="btn btn-primary">
         <i class="fas fa-plus"></i> Add New User
-      </a>
+      </a> -->
     </div>
 
     <div class="card-body">
@@ -38,7 +38,7 @@
             <td>{{ user.email }}</td>
             <td>{{ getRoleName(user) }}</td>
             <td>
-              <a [routerLink]="['/users/edit', user.id]" class="btn btn-sm btn-primary">
+              <a [routerLink]="['/dashboard/users/edit', user.id]" class="btn btn-sm btn-primary">
                 Edit
               </a>
               <button (click)="deleteUser(user.id)" class="btn btn-sm btn-danger ml-2">
