--- a/pfe-frontend/src/app/core/features/components/permissions/permission-list/permission-list.component.html
+++ b/pfe-frontend/src/app/core/features/components/permissions/permission-list/permission-list.component.html
@@ -1,33 +1,61 @@
-<div class="permission-list">
-    <div class="header">
-      <h2>Permissions</h2>
-      <button routerLink="/dashboard/permissions/create" class="btn-primary">
-        + New Permission
-      </button>
-    </div>
-  
-    <div *ngIf="loading" class="loading">Loading...</div>
-    <div *ngIf="error" class="error">{{ error }}</div>
-  
-    <table *ngIf="permissions.length > 0">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let perm of permissions">
-          <td>{{ perm.name }}</td>
-          <td>
-            <button (click)="editPermission(perm.id)" class="btn-edit">Edit</button>
-            <button (click)="deletePermission(perm.id)" class="btn-delete">Delete</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  
-    <div *ngIf="!loading && permissions.length === 0" class="no-data">
-      No permissions found
-    </div>
+<div class="space-y-4">
+  <div class="flex items-center justify-between">
+    <h2 class="text-2xl font-semibold text-gray-800">Permissions</h2>
+    <button
+      pButton
+      type="button"
+      label="New Permission"
+      icon="pi pi-plus"
+      class="p-button-sm p-button-primary"
+      [routerLink]="'/dashboard/permissions/create'"
+    ></button>
   </div>
+
+  <p-progressSpinner *ngIf="loading" styleClass="w-8 h-8"></p-progressSpinner>
+  <p-message *ngIf="error" severity="error" text="{{ error }}"></p-message>
+
+  <p-table
+    *ngIf="!loading && permissions.length > 0"
+    [value]="permissions"
+    [paginator]="true"
+    [rows]="10"
+    [rowsPerPageOptions]="[5, 10, 20, 50]"
+    [responsiveLayout]="'scroll'"
+    class="p-datatable-sm"
+  >
+    <ng-template pTemplate="header">
+      <tr>
+        <th>Name</th>
+        <th>Actions</th>
+      </tr>
+    </ng-template>
+
+    <ng-template pTemplate="body" let-perm>
+      <tr>
+        <td>{{ perm.name }}</td>
+        <td class="flex gap-2">
+          <button
+            pButton
+            type="button"
+            icon="pi pi-pencil"
+            class="p-button-sm p-button-text text-blue-600"
+            (click)="editPermission(perm.id)"
+          ></button>
+          <button
+            pButton
+            type="button"
+            icon="pi pi-trash"
+            class="p-button-sm p-button-text text-red-600"
+            (click)="deletePermission(perm.id)"
+          ></button>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+
+  <p-message
+    *ngIf="!loading && permissions.length === 0"
+    severity="info"
+    text="No permissions found"
+  ></p-message>
+</div>
