Leave Logic Updated

--- a/pfe-frontend/src/app/core/features/components/employee/employee-list/employee-list.component.html
+++ b/pfe-frontend/src/app/core/features/components/employee/employee-list/employee-list.component.html
@@ -61,7 +61,7 @@
       <p><strong>ID:</strong> {{ selectedEmployee.id }}</p>
       <p><strong>Name:</strong> {{ selectedEmployee.first_name }} {{ selectedEmployee.last_name }}</p>
       <p><strong>Phone:</strong> {{ selectedEmployee.phone }}</p>
-      <p><strong>Department:</strong> {{ selectedEmployee.department }}</p>
+      <p><strong>Department:</strong> {{ selectedEmployee.department_id }}</p>
       <p><strong>Position:</strong> {{ selectedEmployee.position }}</p>
       <p><strong>Hire Date:</strong> {{ selectedEmployee.hire_date }}</p>
       <p><strong>Salary:</strong> ${{ selectedEmployee.salary }}</p>
