--- a/pfe-frontend/src/app/core/sidebar/sidebar.component.html
+++ b/pfe-frontend/src/app/core/sidebar/sidebar.component.html
@@ -69,5 +69,13 @@
             class="block p-2 rounded hover:bg-blue-100">departments</a></li>
       </ul>
     </div>
+
+    <div>
+      <h3 class="text-gray-500 uppercase text-xs mb-2">Contracts</h3>
+      <ul>
+        <li><a pRipple routerLink="/dashboard/contracts" routerLinkActive="active"
+            class="block p-2 rounded hover:bg-blue-100">Contracts</a></li>
+      </ul>
+    </div>
   </nav>
 </div>
